Fixed RES alignment in linear map

--- a/public/stylesheets/components/_linear_map.scss
+++ b/public/stylesheets/components/_linear_map.scss
@@ -105,7 +105,7 @@
       display: block;
       content: "";
       margin-left: 54px;
-      margin-bottom: -8px;
+      margin-bottom: -6px;
       border-bottom: 1px solid $res-color;
     }
   }
